--- a/blog/static/blog/css/markdownx-horizontal.css
+++ b/blog/static/blog/css/markdownx-horizontal.css
@@ -75,9 +75,13 @@
 }
 
 .markdownx .markdownx-preview img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 4px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    /*max-width: 100%;*/
+    /*height: auto;*/
+    /*border-radius: 4px;*/
+    /*margin: 0 auto;*/
 }
 
 /* Адаптивность: на мобильных — вертикально */
