--- a/templates/base.html
+++ b/templates/base.html
@@ -9,9 +9,7 @@
     {% endblock %}
     <link rel="stylesheet" href="{% load static %}{% static 'css/output.css' %}">
     <title>{% block title %}TravelBlog{% endblock %}</title>
-    <style>
-        {% block extra_css %}{% endblock %}
-    </style>
+    {% block extra_css %}{% endblock %}
 </head>
 <body class="bg-background text-text-body">
 <header class="bg-secondary text-white">
@@ -47,5 +45,7 @@
         <p>© 2024 TravelBlog. Все права защищены.</p>
     </div>
 </footer>
+{% block extra_js %}
+{% endblock %}
 </body>
 </html>
