--- a/templates/base.html
+++ b/templates/base.html
@@ -15,17 +15,72 @@
     {% block extra_css %}{% endblock %}
 </head>
 <body class="bg-background text-text-body">
-<header class="bg-secondary text-white z-50" >
+<header class="bg-secondary text-white z-50">
     <div class="container mx-auto px-4 py-4 flex justify-between items-center h-20">
         <a href="/" class="text-2xl font-bold text-primary">TravelBlog</a>
         <!-- Десктопное меню -->
         <nav class="hidden md:block">
             <ul class="flex space-x-6">
-                <li><a href="{% url 'blog:location_root' %}" class="hover:text-primary transition">Локации</a></li>
-                <li><a href="{% url 'blog:tag_list' %}" class="hover:text-primary transition">Теги</a></li>
-                <li><a href="{% url 'blog:best_posts' %}" class="hover:text-primary transition">Лучшие</a></li>
-                <li><a href="{% url 'blog:popular_posts' %}" class="hover:text-primary transition">Популярные</a></li>
-                <li><a href="{% url 'blog:about_page' %}" class="hover:text-primary transition">О нас</a></li>
+                <li>
+                    <a href="{% url 'blog:location_root' %}"
+                       class="flex items-center gap-1.5 hover:text-primary transition">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                             stroke="currentColor" class="size-5">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"/>
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1 1 15 0Z"/>
+                        </svg>
+                        Локации
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'blog:tag_list' %}" class="flex items-center gap-1.5 hover:text-primary transition">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                             stroke="currentColor" class="size-6">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="M9.568 3H5.25A2.25 2.25 0 0 0 3 5.25v4.318c0 .597.237 1.17.659 1.591l9.581 9.581c.699.699 1.78.872 2.607.33a18.095 18.095 0 0 0 5.223-5.223c.542-.827.369-1.908-.33-2.607L11.16 3.66A2.25 2.25 0 0 0 9.568 3Z"/>
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M6 6h.008v.008H6V6Z"/>
+                        </svg>
+
+                        Теги
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'blog:best_posts' %}"
+                       class="flex items-center gap-1.5 hover:text-primary transition">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                             stroke="currentColor" class="size-5">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="M11.48 3.499a.562.562 0 0 1 1.04 0l2.125 5.111a.563.563 0 0 0 .475.345l5.518.442c.499.04.698.662.32 1.02l-4.204 4.102a.563.563 0 0 0-.182.514l.996 5.082a.562.562 0 0 1-.838.606L6.72 16.5a.563.563 0 0 0-.514-.182l-5.082.996a.562.562 0 0 1-.606-.838l4.102-4.204a.563.563 0 0 0-.345-.475L3.499 10.48a.562.562 0 0 1 0-1.04z"/>
+                        </svg>
+                        Лучшие
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'blog:popular_posts' %}"
+                       class="flex items-center gap-1.5 hover:text-primary transition">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                             stroke="currentColor" class="size-5">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="M15.362 5.214A8.252 8.252 0 0 1 12 21 8.25 8.25 0 0 1 6.038 7.048 8.287 8.287 0 0 0 9 9.6a8.983 8.983 0 0 1 3.361-6.867 8.21 8.21 0 0 0 3 2.48z"/>
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="M12 18a3.75 3.75 0 0 0 .495-7.467 5.99 5.99 0 0 0-1.925 3.546 5.974 5.974 0 0 1-2.133-1A3.75 3.75 0 0 0 12 18Z"/>
+                        </svg>
+                        Популярные
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'blog:about_page' %}"
+                       class="flex items-center gap-1.5 hover:text-primary transition">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                             stroke="currentColor" class="size-5">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="M11.25 11.25l.041-.02a.75.75 0 011.063.852l-.708 2.836a.75.75 0 001.063.853l.041-.021M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9-3.75h.008v.008H12V8.25z"/>
+                        </svg>
+                        О нас
+                    </a>
+                </li>
             </ul>
         </nav>
         <!-- Кнопка гамбургера / крестика -->
@@ -50,11 +105,49 @@
 </div>
 <div id="mobile-menu" class="fixed right-0 z-40 w-40 bg-secondary pb-6 pt-5 text-white hidden">
     <nav class="flex flex-col px-4">
-        <a href="{% url 'blog:location_root' %}" class="hover:text-primary mb-6 text-lg">Локации</a>
-        <a href="{% url 'blog:tag_list' %}" class="hover:text-primary mb-6 text-lg">Теги</a>
-        <a href="{% url 'blog:best_posts' %}" class="hover:text-primary mb-6 text-lg">Лучшие</a>
-        <a href="{% url 'blog:popular_posts' %}" class="hover:text-primary mb-6 text-lg">Популярные</a>
-        <a href="{% url 'blog:about_page' %}" class="hover:text-primary mb-6 text-lg">О нас</a>
+        <a href="{% url 'blog:location_root' %}" class="flex items-center gap-2 hover:text-primary mb-6 text-lg">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                 stroke="currentColor" class="size-5">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"/>
+                <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1 1 15 0Z"/>
+            </svg>
+            Локации
+        </a>
+        <a href="{% url 'blog:tag_list' %}" class="flex items-center gap-2 hover:text-primary mb-6 text-lg">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                 stroke="currentColor" class="size-5">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M9.568 3H5.25A2.25 2.25 0 0 0 3 5.25v4.318c0 .597.237 1.17.659 1.591l9.581 9.581c.422.422 1 .659 1.591.659h4.318a2.25 2.25 0 0 0 2.25-2.25v-4.318c0-.591-.237-1.164-.659-1.585L12.432 9.568a1.5 1.5 0 0 0-2.122 0L9.568 10.31Z"/>
+            </svg>
+            Теги
+        </a>
+        <a href="{% url 'blog:best_posts' %}" class="flex items-center gap-2 hover:text-primary mb-6 text-lg">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                 stroke="currentColor" class="size-5">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M11.48 3.499a.562.562 0 0 1 1.04 0l2.125 5.111a.563.563 0 0 0 .475.345l5.518.442c.499.04.698.662.32 1.02l-4.204 4.102a.563.563 0 0 0-.182.514l.996 5.082a.562.562 0 0 1-.838.606L6.72 16.5a.563.563 0 0 0-.514-.182l-5.082.996a.562.562 0 0 1-.606-.838l4.102-4.204a.563.563 0 0 0-.345-.475L3.499 10.48a.562.562 0 0 1 0-1.04z"/>
+            </svg>
+            Лучшие
+        </a>
+        <a href="{% url 'blog:popular_posts' %}" class="flex items-center gap-2 hover:text-primary mb-6 text-lg">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                 stroke="currentColor" class="size-5">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M15.362 5.214A8.252 8.252 0 0 1 12 21 8.25 8.25 0 0 1 6.038 7.048 8.287 8.287 0 0 0 9 9.6a8.983 8.983 0 0 1 3.361-6.867 8.21 8.21 0 0 0 3 2.48z"/>
+                <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M12 18a3.75 3.75 0 0 0 .495-7.467 5.99 5.99 0 0 0-1.925 3.546 5.974 5.974 0 0 1-2.133-1A3.75 3.75 0 0 0 12 18Z"/>
+            </svg>
+            Популярные
+        </a>
+        <a href="{% url 'blog:about_page' %}" class="flex items-center gap-2 hover:text-primary mb-6 text-lg">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                 stroke="currentColor" class="size-5">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M11.25 11.25l.041-.02a.75.75 0 011.063.852l-.708 2.836a.75.75 0 001.063.853l.041-.021M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9-3.75h.008v.008H12V8.25z"/>
+            </svg>
+            О нас
+        </a>
     </nav>
 </div>
 
