--- a/blog/templates/blog/location_detail.html
+++ b/blog/templates/blog/location_detail.html
@@ -56,6 +56,10 @@
                 {% for post in posts %}
                     {% include "blog/partials/post_card.html" with post=post %}
                 {% endfor %}
+                <!-- Пагинация -->
+                {% if is_paginated %}
+                    {% include "blog/partials/pagination.html" with page_obj=page_obj %}
+                {% endif %}
             </div>
         {% else %}
             <p>Пока нет записей в этом месте.</p>
