--- a/blog/templates/blog/tag_detail.html
+++ b/blog/templates/blog/tag_detail.html
@@ -30,7 +30,7 @@
 
     <!-- Пагинация -->
     {% if is_paginated %}
-      {% include "blog/partials/post_card.html" with post=post %}
+      {% include "blog/partials/pagination.html" with page_obj=page_obj %}
     {% endif %}
 
   {% else %}
