--- a/blog/templates/blog/about_page.html
+++ b/blog/templates/blog/about_page.html
@@ -1,6 +1,6 @@
 <!-- blog/templates/blog/about_page.html -->
 {% extends "base.html" %}
-{% block title %}{{ page.title }} — TravelBlog{% endblock %}
+{% block title %}{{ page.title }} — InfoRussiaTravel{% endblock %}
 {% block meta_description %}
     <meta name="description" content="{{ page.meta_description|default:page.title }}"/>
 {% endblock %}
