--- a/blog/templates/blog/best_posts.html
+++ b/blog/templates/blog/best_posts.html
@@ -1,6 +1,6 @@
 <!-- blog/templates/blog/best_posts.html -->
 {% extends "base.html" %}
-{% block title %}Лучшие статьи — TravelBlog{% endblock %}
+{% block title %}Лучшие статьи — InfoRussiaTravel{% endblock %}
 {% block meta_description %}
     <meta name="description" content="Топ-10 самых высокооценённых статей в нашем блоге о путешествиях по России."/>
 {% endblock %}
