--- a/blog/templates/blog/location_detail.html
+++ b/blog/templates/blog/location_detail.html
@@ -2,7 +2,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-    {% if full_title %}{{ full_title }}{% else %}{{ location.name }}{% endif %} — TravelBlog
+    {% if full_title %}{{ full_title }}{% else %}{{ location.name }}{% endif %} — InfoRussiaTravel
 {% endblock %}
 
 {% block meta_description %}
