--- a/blog/templates/blog/popular_posts.html
+++ b/blog/templates/blog/popular_posts.html
@@ -1,6 +1,6 @@
 <!-- blog/templates/blog/popular_posts.html -->
 {% extends "base.html" %}
-{% block title %}Популярные статьи — TravelBlog{% endblock %}
+{% block title %}Популярные статьи — InfoRussiaTravel{% endblock %}
 {% block meta_description %}
     <meta name="description" content="Самые читаемые статьи в нашем блоге о путешествиях по России."/>
 {% endblock %}
