--- a/blog/templates/blog/location_root.html
+++ b/blog/templates/blog/location_root.html
@@ -1,7 +1,7 @@
 <!-- blog/templates/blog/location_root.html -->
 {% extends "base.html" %}
 
-{% block title %}Локации — TravelBlog{% endblock %}
+{% block title %}Локации — InfoRussiaTravel{% endblock %}
 
 {% block meta_description %}
   <meta name="description" content="Исследуйте локации: от регионов до улиц и достопримечательностей." />
