--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,7 +1,7 @@
 <!-- blog/templates/blog/post_detail.html -->
 {% extends "base.html" %}
 
-{% block title %}{{ post.title }} — TravelBlog{% endblock %}
+{% block title %}{{ post.title }} — InfoRussiaTravel{% endblock %}
 
 {% block meta_description %}
     <meta name="description" content="{{ post.meta_description|default:post.content_markdown|truncatewords:30 }}"/>
