--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,7 +2,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-    {% if full_title %}{{ full_title }}{% else %}Путешествия и локации{% endif %} — TravelBlog
+    {% if full_title %}{{ full_title }}{% else %}Путешествия и локации{% endif %} — InfoRussiaTravel
 {% endblock %}
 
 {% block content %}
