--- a/blog/templates/blog/tag_detail.html
+++ b/blog/templates/blog/tag_detail.html
@@ -2,7 +2,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-    {% if full_title %}{{ full_title }}{% else %}{{ tag.name }} — Теги{% endif %} — TravelBlog
+    {% if full_title %}{{ full_title }}{% else %}{{ tag.name }} — Теги{% endif %} — InfoRussiaTravel
 {% endblock %}
 
 {% block meta_description %}
