--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <link rel="canonical" href="{{ request.build_absolute_uri }}" />
     <link rel="stylesheet" href="{% static 'css/output.css' %}">
     <script src="https://unpkg.com/htmx.org@2.0.2"></script>
-    <title>{% block title %}TravelBlog{% endblock %}</title>
+    <title>{% block title %}InfoRussiaTravel{% endblock %}</title>
     <!-- CSRF для HTMX -->
     <meta name="csrf-token" content="{{ csrf_token }}">
     {% block extra_css %}{% endblock %}
@@ -19,7 +19,7 @@
 <body class="bg-background text-text-body">
 <header class="bg-secondary text-white z-50">
     <div class="container mx-auto px-4 py-4 flex justify-between items-center h-20">
-        <a href="/" class="text-2xl font-bold text-primary">TravelBlog</a>
+        <a href="/" class="text-2xl font-bold text-primary">InfoRussiaTravel</a>
         <!-- Десктопное меню -->
         <nav class="hidden md:block">
             <ul class="flex space-x-6">
@@ -163,7 +163,7 @@
 
 <footer class="bg-secondary text-white py-8 mt-12">
     <div class="container mx-auto px-4 text-center">
-        <p>© 2025 TravelBlog. Все права защищены.</p>
+        <p>© 2025 InfoRussiaTravel. Все права защищены.</p>
     </div>
 </footer>
 
