--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="{% static 'css/output.css' %}">
     <script src="https://unpkg.com/htmx.org@2.0.2"></script>
     <title>{% block title %}InfoRussiaTravel{% endblock %}</title>
-    <link rel="shortcut icon" type="image/png" href="{% static 'f2_2.png' %}"/>
+    <link rel="shortcut icon" type="image/png" href="{% static 'fav120x120.png' %}"/>
     <!-- CSRF для HTMX -->
     <meta name="csrf-token" content="{{ csrf_token }}">
     {% block extra_css %}{% endblock %}
