--- a/blog/static/blog/css/markdownx-horizontal.css
+++ b/blog/static/blog/css/markdownx-horizontal.css
@@ -78,7 +78,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    /*max-width: 100%;*/
+    max-width: 100%;
     /*height: auto;*/
     /*border-radius: 4px;*/
     /*margin: 0 auto;*/
